--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 # Do not include azure-functions-worker as it may conflict with the Azure Functions platform
 
-CosmoTech-Acceleration-Library
+CosmoTech-Acceleration-Library>=0.2.7
 CosmoTech-SupplyChain
