fix: typo in the release github job name

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build_release:
-    name: build_relase
+    name: build_release
     runs-on: ubuntu-latest
     steps:
       - name: checkout
