--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,36 +14,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Get the version
-        id: get_version
-        run: echo VERSION=${GITHUB_REF/refs\/tags\//} >> $GITHUB_OUTPUT
+
       - name: setup python version
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+
       - name: install dependencies
         run: pip install --target .python_packages/lib/site-packages/ -r requirements.txt
+
       - name: make artifact
         run: zip -r artifact.zip . -x ".git/*" ".github/*" ".gitignore"
-      - name: release
-        id: create_release
-        uses: actions/create-release@v1
-        with:
-          draft: true
-          prerelease: false
-          release_name: ${{ github.ref }}
-          tag_name: ${{ github.ref }}
+
+      - name: Draft release
         env:
-          GITHUB_TOKEN: ${{ github.token }}
-      - name: upload artifact
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifact.zip
-          asset_name: artifact.zip
-          asset_content_type: application/gzip
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create "${{ github.ref_name }}" \
+            --title "${{ github.ref_name }}" \
+            --repo "${{ github.repository }}" \
+            --draft \
+            --verify-tag \
+            "./artifact.zip#artifact.zip"
